Exclude largefile.zip from being pushed

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .DS_Store
 .DS_Store?
+1by4-Edge-8Degree.zip 
+1by4-TOPO-Resized.zip 
+2by2-Resized_Rotated-Topo.zip
+4by4-Resized_Rotated-Topo.zip 
+4by4-TOPO-24X224.zip 
+Edge-6-Topo.zip
